# ss_watermark

./: .gitignore  README.md  _watermark.py  pyproject.toml  requirements.txt  s42_watermark.spec  watermark.py  watermark.spec
.github/workflows/: build.yml
src/watermark42/: _watermark.py  compressor.py  watermark.py
